Fix team managment (#121)
Fix member/admin button overflowing

Fix changing team member admin status

Fix adding team members

Reviewed-on: https://kolaente.dev/vikunja/frontend/pulls/121

--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -11,6 +11,8 @@
 
   .table{
     border-top: 1px solid darken(#fff, 15%);
+    border-radius: 4px;
+    overflow: hidden;
 
     td{
       vertical-align: middle;
